--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,19 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Python
+*.pyc
+*.lo
+*.o
+
+# Environments
+.env
+venv/
+
+# Misc
+.DS_Store
+.vscode
+tmp/
+
+# Local test file
+test.go
